--- a/competitors/static/competitors/css/base.css
+++ b/competitors/static/competitors/css/base.css
@@ -1,4 +1,4 @@
-* {
+/** {
 	margin: 0;
 }
 body{
@@ -19,12 +19,12 @@ body{
 #nav_search{
   width: 300px;
 }
-
+*/
 /*.navbar_search input:hover{
 	color: black;
 }*/
 
-#title{
+/*#title{
 	height: 50px;
 	margin: 0 auto;
 	width: 1024px;
@@ -140,15 +140,100 @@ body{
 #forget{
 	width: 295px;
 	margin-top:5px; 
+}*/
+
+
+
+
+
+
+
+
+
+
+#logo-wrapper {
+	margin-top: 0.5em;
+	margin-left: 10%;	
+}
+
+#sign {
+	text-align: right;
+	margin-top: 1%;
+	margin-bottom: 1%;
+	margin-right: 5%;
+	line-height: 49px;
+}
+
+#sign .btn{
+	/*line-height: 70px;*/
+}
+
+#menu{
+	position: absolute;
+	top: 1em;
+	left:0;
+	height: 70px;
+	z-index: 70;
+	width: 100%;
+	padding: 0;
+	margin:0;
+	background: rgba(192,192,192, 0.3);
+}
+
+#menu li {
+	display:inline-block;
+	margin: 10px;
+	color: #000;
+	background: rgba(255,255,255, 0.1);
+	-webkit-border-radius: 10px;
+            border-radius: 10px;
+}
+
+#menu li.active{
+	background:#666;
+	background: rgba(0,0,0, 0.5);
+	color: #fff;
+}
+#menu li a{
+	text-decoration:none;
+	color: #000;
+}
+#menu li.active a:hover{
+	color: #000;
+}
+#menu li:hover{
+	background: rgba(255,255,255, 0.8);
+}
+#menu li a,
+#menu li.active a{
+	padding: 9px 18px;
+	display:block;
+}
+#menu li.active a{
+	color: #fff;
+}
+
+#footer {
+	font-weight: bold;
+	color: white;
+	background: #494949;
+}
+
+#footer-text {
+	padding-top: 2em;
 }
 
 
-#footer{
-    clear: both;
-    position: relative;
-    z-index: 10;
-    height: 3em;
-    margin-top: 3em;
-	text-align: center;
+/*#team1 {
+	margin-top: 10px; 
+	padding-left: 20px;
+	width: 100px;
+	height: 90px;
+	background-image: url("../media/whu.png");
+	background-repeat: no-repeat;
+}*/
+
+#facebool-wrapper, #twitter-wrapper, #rss-wrapper {
+	margin-left: 1em;
 }
 
