player colum gap js recovered

--- a/competitors/templates/competitors/index.html
+++ b/competitors/templates/competitors/index.html
@@ -72,5 +72,5 @@
 				{% endfor %} 
 			</div>
 		</div>
-		<!--<script type="text/javascript" src="{{STATIC_URL}}competitors/js/index.js"></script>-->
+		<script type="text/javascript" src="{{STATIC_URL}}competitors/js/index.js"></script>
 {% endblock %}
