--- a/competitors/static/competitors/css/register.css
+++ b/competitors/static/competitors/css/register.css
@@ -1,56 +1,51 @@
 body{
-	margin: 0;
-	min-width: 1024px;
-	background: url("/static/competitors/img/bg_register.jpg") fixed -600px -580px;
-	background-size:2400px;
+	background-color: #A9A9A9 !important;
 }
 @media screen and (min-width: 1024px){
 
 }
-#container{
-	min-width: 1000px;
-}
-#navbar{
-	width: 100%;
-	height: 50px;
-	background: rgba(150,205,205,0.7);
-}
-#title{
-	height: 50px;
-	margin: 0 auto;
-	width: 1000px;
-	text-align: left;
-}
-#title *{
-	text-decoration: none;
-	color: rgb(255,255,255);
-	display: inline;
-}
-#title *:hover{
-	color: rgb(230,255,230);
-}
-#login{
-	float: right;
-	line-height: 50px;
-}
-#main{
-	clear: both;
-	width: 1000px;
-	margin: 20px auto;
-}
-#registerform{
-	margin-top: 50px;
-	padding-left: 50px; 
-	width: 500px;
-	text-align: left;
-	background-color: rgba(160,160,160,0.7)
-}
-#registerform input[type=text], #registerform input[type=password]{
-	width: 225px;
-	height: 30px;
+#menu{
+	background: #FF8C00 !important;
 }
 
-#registerform button{
-	margin: 10px 0;
-	width: 225px;
+#header {
+	position: absolute;
+	top: 0;
+	height: 280px;
+	width: 100%;
+	background: #FFDAB9;
+	z-index: -1;
+}
+
+.radio {
+	padding-left: 1em;
+}
+
+#form-head {
+	font-weight: bold;
+	padding-left: 1em;
+	padding-bottom: 2em;
+}
+
+.form-group {
+	padding: 2em 2em;
+}
+
+.form-group a, .form-group a:hover {
+	text-decoration: none;
+	color: #FF8C00;
+}
+
+#body {
+	margin-top: 150px;
+}
+
+#form-wrapper {
+	z-index: 20;
+	background: rgba(255, 255, 255, 0.8);
+	border: 2px solid rgba(255, 255, 255, 0.8);
+	border-radius: 1em;
+	box-shadow: 5px 5px 5px #888888;
+	padding: 10% 20% 10% 10%;
+	margin-bottom: 10%;
 }
