--- a/competitors/templates/registration/register.html
+++ b/competitors/templates/registration/register.html
@@ -1,4 +1,58 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <title>Sign Up for Competitors</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}competitors/css/register.css">
+    <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}competitors/css/header.css">
+    <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}competitors/css/footer.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+    <!-- Optional theme -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css">
+    <script src="{{STATIC_URL}}competitors/js/jquery.min.js"></script>
+    <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+
+</head>
+<body>
+    <div id="header">
+        {% include 'competitors/navbar.html' %}
+    </div>
+    <div id="body">
+        <div class="container" id="form-wrapper">
+            <h2 class="col-sm-offset-2" id="form-head"> Welcome! </h2>
+            <form action="#" name="signup-form" class="form-horizontal">
+                {% for field in form %}
+                <div class="form-group">
+                    <label for="inputFirstname" class="col-sm-2 control-label">{{field.label}}</label>
+                    <div class="col-sm-10">
+                      {{field}}
+                    </div>
+                </div>
+                {% endfor %}
+            <div class="form-group">
+                <div class="radio col-sm-offset-2">
+                    <label>
+                        <input type="radio" name="optionsRadios" id="optionsRadios" value="agree">
+                        I have read and agree with the <a href="javascript:;">Agreement</a>
+                    </label>
+                </div>
+            </div>
+            <div id="form-action">
+                <div class="col-sm-2"></div>
+                <button type="submit" class="btn btn-warning">Register</button>
+            </div>
+        </form>
+    </div>
+</div>
+{% include 'competitors/footer.html' %}
+<script src="{{STATIC_URL}}competitors/js/register.js"></script>
+
+
+
+
+<!-- <!DOCTYPE HTML>
 <html>
     <head>
         <meta charset="utf-8">
@@ -67,3 +121,4 @@
     </body>
 </html>
 
+ -->
